@@ -81,6 +81,7 @@ Install the following Perl modules from CPAN:
   DBD::mysql or other RDBMS driver
   DBIx::Abstract
   DBIx::Sequence
+  Excel::Writer::XLSX
 
 On many platforms, DBI is already pre-installed. You need to make sure
 that appropriate DBD driver is installed for your database engine.
@@ -320,6 +321,10 @@ The next example generates HTML output for all reports that are found
 in the database:
 
  nice torrus report --genhtml --tree=customers
+
+The following command generates yearly reports in Excel format:
+
+ nice torrus report --genxlsx --tree=customers
 
 It makes sence to set up a monthly cron job and generate the reports on
 the first day of every month, with the command like follows:
