@@ -1,3 +1,8 @@
+2016-08-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/ReportOutput/XLSX.pm: usage report renderer in
+	Excel file format
+
 2016-03-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoIOS_SAA.pm: added jitter statistics
